fix height card and icon spacing on select bar

--- a/src/app/features/products/components/product-grid-card/product-grid-card.component.scss
+++ b/src/app/features/products/components/product-grid-card/product-grid-card.component.scss
@@ -8,7 +8,7 @@
 .card-container {
 	margin: 0px;
 	width: 330px;
-	height: 336px;
+	height: 340px;
 	background: white;
 	overflow: hidden;
 	border: 4px solid white;
@@ -21,8 +21,7 @@
 	}
 
 	&.selectedCard {
-		outline: 2px solid var(--color-primary);
-		border-radius: 2px;
+		box-shadow: 0px 0px 0px 2px var(--color-primary);
 	}
 
 	.card-content {
@@ -95,7 +94,7 @@
 			}
 
 			icons-status-app {
-				padding-bottom: 14px;
+				padding-bottom: 18px;
 			}
 		}
 
