--- a/src/app/features/products/containers/products-page/products-page.component.scss
+++ b/src/app/features/products/containers/products-page/products-page.component.scss
@@ -7,6 +7,9 @@ action-bar-app {
 	overflow: visible;
 	context-menu-trigger-app {
 		width: 160px;
+		button.icon {
+			margin-right: 0px;
+		}
 	}
 	button.icon {
 		margin-right: var(--spacing-ms);
